# pyrlang-elixir-example

./: .gitignore  Dockerfile.elixir  Dockerfile.python  README.md  docker-compose.yml  example.exs  example.py  pyproject.toml
.github/workflows/: demo.yml
scripts/: run-python.sh
